New boolean - wrong result if part of mesh is hidden in Edit mode #81651

Closed
opened 2020-10-12 14:56:58 +02:00 by Miro Horváth · 7 comments

System Information
Operating system: W10
Graphics card: NVIDIA970

Blender Version
Broken: blender-2.91.0-3178dc25f6ed-windows64

Short description of error
Intersect mode returns wrong result if part of a mesh is hidden in Edit mode. In my case it returns hidden part where it supposed to return empty mesh.

Exact steps for others to reproduce the error

  • Fire up boolean_bug.blend and the wrong result(sphere in object 'B') shows up right away.
    To see expected result:
  • unhide object 'A', select it and go to Edit mode(you can hide object 'B' for time being to not interfere with object 'A'), you should see 'Cube' part of mesh
  • press Alt+H to unhide 'Sphere' part of mesh and then Tab out of Edit mode
  • hide object 'A' and unhide object 'B'
  • now the mesh of object 'B' should be empty what is the desired output
**System Information** Operating system: W10 Graphics card: NVIDIA970 **Blender Version** Broken: blender-2.91.0-3178dc25f6ed-windows64 **Short description of error** Intersect mode returns wrong result if part of a mesh is hidden in Edit mode. In my case it returns hidden part where it supposed to return empty mesh. **Exact steps for others to reproduce the error** - Fire up [boolean_bug.blend](https://archive.blender.org/developer/F8982432/boolean_bug.blend) and the wrong result(sphere in object 'B') shows up right away. To see expected result: - unhide object 'A', select it and go to Edit mode(you can hide object 'B' for time being to not interfere with object 'A'), you should see 'Cube' part of mesh - press Alt+H to unhide 'Sphere' part of mesh and then Tab out of Edit mode - hide object 'A' and unhide object 'B' - now the mesh of object 'B' should be empty what is the desired output
Author

Added subscriber: @MiroHorvath

Added subscriber: @MiroHorvath

Added subscribers: @howardt, @mano-wii

Added subscribers: @howardt, @mano-wii

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Thanks for the report, I can confirm the problem.
Strange how the flag for hiding elements in edit mode can affect the result of the boolean modifier.
There is really something wrong there.

Thanks for the report, I can confirm the problem. Strange how the flag for hiding elements in edit mode can affect the result of the boolean modifier. There is really something wrong there.

This issue was referenced by 39012146e1

This issue was referenced by 39012146e142bf400c7140d90ecfd27c45b589ca

This issue was referenced by 06dac0a453

This issue was referenced by 06dac0a453208a81ea6386aa2c648d096f6b6366
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Howard Trickey self-assigned this 2020-11-08 14:41:25 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#81651
No description provided.